Fixed CSS spacing issue on mobile

--- a/main.css
+++ b/main.css
@@ -116,7 +116,7 @@ li {
 
 .app_info_tech {
     flex: 1;
-    margin-right: -20%;
+    margin-right: -10%;
     margin-top: -.85%;
 }
 
